--- a/client/src/pages/Info.css
+++ b/client/src/pages/Info.css
@@ -2,7 +2,6 @@
     background-color: #fff;
     padding: 40px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
     max-width: 800px;
     margin: 0 auto;
@@ -36,11 +35,15 @@
   }
 
   .background{
-    background-color: #e6e6fa;
+    background-color: pink;
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
     max-width: 800px;
     margin: 0 auto;
+  }
+
+  h2{
+    color: red;
   }
