--- a/client/src/pages/ShoppingCart.css
+++ b/client/src/pages/ShoppingCart.css
@@ -33,8 +33,9 @@
   }
   
   .pay-button {
-    background-color: #007bff;
-    color: #fff;
+    background-color:  pink;
+    color:  black;
+    font-weight: bold;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -43,6 +44,10 @@
   }
   
   .pay-button:hover {
-    background-color: #0056b3;
+    background-color:  rgba(176, 31, 31, 0.742);
+  }
+
+  .empty{
+   text-align: center;
   }
   
